--- a/default.css
+++ b/default.css
@@ -81,12 +81,12 @@ h6 { font-size: 16px;}
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 1200px;
-	margin: 0 auto;
-  }
+	width: 800px;
+
+}
   
   .typing-demo {
-color: var(--mainText);
+	color: var(--mainText);
 	width: 22ch;
 	animation: typing 7s steps(22), blink 0.5s step-start infinite alternate;
 	white-space: nowrap;
@@ -98,8 +98,7 @@ color: var(--mainText);
   
   @keyframes typing {
 	from {
-		opacity: 20s;
-	  width: 0
+	  width: 0;
 	
 	}
   }
@@ -110,6 +109,7 @@ color: var(--mainText);
 	}
   }
   
+
 .intro-wrapper{
 	background-color: var(--secondaryColor);
 	border:1px solid var(--borderColor);
@@ -432,10 +432,17 @@ color: var(--mainText);
 	border:none;
 }
 
-
 @media screen and (max-width: 1200px){
 	.main-container{
 		width: 95%;
+	}
+}
+
+@media screen and (max-width: 400px){
+	.greeting-wrapper{
+		width: 100%;
+		text-align: center;
+		font-size: 5px;
 	}
 }
 
@@ -469,6 +476,5 @@ color: var(--mainText);
 	}
 
 }
-
-
-
+}
+}
